[gd_scene load_steps=6 format=3 uid="uid://bfn505w1lhvx3"]

[ext_resource type="Script" uid="uid://bsskmmcdqj42m" path="res://scripts/teacher.gd" id="1_b6u4t"]
[ext_resource type="PackedScene" uid="uid://c61mb2p3x5d3x" path="res://scenes/interactable.tscn" id="1_v8tdc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b6u4t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tapem"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b6u4t"]

[node name="teacher" type="Node3D"]
script = ExtResource("1_b6u4t")

[node name="Teacher" type="CharacterBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Teacher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88, 0)
mesh = SubResource("CapsuleMesh_b6u4t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Teacher"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.88, 0)
shape = SubResource("CapsuleShape3D_tapem")

[node name="Interactable" parent="." instance=ExtResource("1_v8tdc")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_b6u4t")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
